[gd_scene load_steps=8 format=3 uid="uid://c1comohc3tpa5"]

[ext_resource type="Script" uid="uid://dxh4ypmrqmn0w" path="res://scripts/playermovementinput.gd" id="1_qlg0r"]
[ext_resource type="Resource" uid="uid://dl3namc4nef0" path="res://scripts/weaponresources/debugwep_info.tres" id="3_fjrip"]
[ext_resource type="Script" uid="uid://cagl2dj4xmgde" path="res://scripts/reticle.gd" id="5_smehm"]
[ext_resource type="Script" uid="uid://byw2tb8odojpb" path="res://scripts/invenManager.gd" id="5_tuyoq"]
[ext_resource type="Script" uid="uid://du7arwj5oiahi" path="res://scripts/held_weapon_behavior.gd" id="6_fjrip"]

[sub_resource type="CylinderMesh" id="CylinderMesh_sh265"]
height = 1.75

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_4flbx"]
points = PackedVector3Array(0.117981, -0.839238, -0.48528, 0.117981, 0.839238, 0.48528, 0.196793, 0.83988, 0.459314, -0.196811, 0.839864, -0.459306, -0.459309, -0.839867, 0.196805, 0.485298, -0.839306, 0.117909, 0.459305, 0.8399, -0.196813, -0.459309, 0.839867, 0.196805, -0.117912, -0.839268, 0.485297, -0.401046, -0.82793, -0.297573, -0.485277, 0.839232, -0.117994, 0.196793, -0.83988, 0.459314, 0.459305, 0.8399, 0.196813, 0.196793, 0.83988, -0.459314, 0.401083, -0.828051, -0.297523, -0.297516, 0.828021, 0.401088, -0.196811, -0.839864, -0.459306, 0.378362, -0.835003, 0.326204, -0.485277, -0.839232, -0.117994, -0.297516, -0.828021, 0.401088, -0.401046, 0.82793, -0.297573, 0.485298, -0.839306, -0.117909, -0.117912, 0.839268, 0.485297, -0.117912, 0.839268, -0.485297, 0.485298, 0.839306, -0.117909, 0.297563, 0.82795, 0.401053, 0.297563, 0.82795, -0.401053, -0.485277, 0.839232, 0.117994, 0.297563, -0.82795, -0.401053, -0.401046, -0.82793, 0.297573, -0.297516, 0.828021, -0.401088, -0.117912, -0.839268, -0.485297)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_qlg0r")

[node name="playercollide" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01781, 0)
visible = false
mesh = SubResource("CylinderMesh_sh265")

[node name="shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0125, 0)
shape = SubResource("ConvexPolygonShape3D_4flbx")

[node name="came" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.58745, -0.254839)
fov = 100.0
far = 500.0

[node name="weapon_rig" type="Node3D" parent="came"]
script = ExtResource("5_tuyoq")

[node name="weaponHolder" type="Node3D" parent="came/weapon_rig"]
script = ExtResource("6_fjrip")
WEP_TYPE = ExtResource("3_fjrip")

[node name="weapModel" type="MeshInstance3D" parent="came/weapon_rig/weaponHolder"]

[node name="reloadTimer" type="Timer" parent="came/weapon_rig/weaponHolder"]
one_shot = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_smehm")

[node name="Top" type="Line2D" parent="Control/CenterContainer"]
points = PackedVector2Array(0, -15, 0, -25)
width = 3.0
default_color = Color(0, 0, 0, 1)

[node name="Top_highlight" type="Line2D" parent="Control/CenterContainer/Top"]
points = PackedVector2Array(0, -16, 0, -24)
width = 1.0

[node name="Bot" type="Line2D" parent="Control/CenterContainer"]
points = PackedVector2Array(0, 15, 0, 25)
width = 3.0
default_color = Color(0, 0, 0, 1)

[node name="Bot_highlight" type="Line2D" parent="Control/CenterContainer/Bot"]
points = PackedVector2Array(0, 16, 0, 24)
width = 1.0

[node name="Left" type="Line2D" parent="Control/CenterContainer"]
points = PackedVector2Array(-15, 0, -25, 0)
width = 3.0
default_color = Color(0, 0, 0, 1)

[node name="Left_highlight" type="Line2D" parent="Control/CenterContainer/Left"]
points = PackedVector2Array(-16, 0, -24, 0)
width = 1.0

[node name="Right" type="Line2D" parent="Control/CenterContainer"]
points = PackedVector2Array(15, 0, 25, 0)
width = 3.0
default_color = Color(0, 0, 0, 1)

[node name="Right_highlight" type="Line2D" parent="Control/CenterContainer/Right"]
points = PackedVector2Array(16, 0, 24, 0)
width = 1.0

[connection signal="timeout" from="came/weapon_rig/weaponHolder/reloadTimer" to="came/weapon_rig/weaponHolder" method="_on_reload_timer_timeout"]
